force-app/main/default/objects/RTL_NBO_History_Product__c/RTL_NBO_History_Product__c.object-meta.xml
<CustomObject>
    <label>NBO Product</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>NBO Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NBO Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>