force-app/main/default/objects/RTL_NBO_History_Product__c/fields/CXM_Latest_Response__c.field-meta.xml
<CustomField>
    <fullName>CXM_Latest_Response__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CXM Latest Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>