force-app/main/default/objects/RTL_NBO_History_Product__c/fields/Is_To_Send_To_CXM__c.field-meta.xml
<CustomField>
    <fullName>Is_To_Send_To_CXM__c</fullName>
    <formula>IF(AND( BEGINS(RTL_Related_NBO__r.RTL_Campaign_Code__c, &apos;R&apos;)
   ,OR( TEXT(RTL_Status__c) = &apos;Rejected&apos;
        ,TEXT(RTL_Status__c) = &apos;Accepted&apos;)
   ,TEXT(LastModifiedBy.RTL_Channel__c) &lt;&gt; &apos;Contact Center&apos;
),True,False)</formula>
    <label>Is To Send To CXM</label>
    <type>Checkbox</type>
</CustomField>