force-app/main/default/objects/RTL_NBO_History_Product__c/fields/RTL_CXM_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>RTL_CXM_Product_Group__c</fullName>
    <formula>IF(RTL_Product_Group__c = &quot;Loan&quot; &amp;&amp; (BEGINS(UPPER(RTL_Product_SubGroup__c), &quot;SECURED&quot;) || BEGINS(UPPER(RTL_Product_SubGroup__c), &quot;HOME&quot;)), &quot;Secured Loan&quot;, IF((RTL_Product_Group__c = &quot;Loan&quot; &amp;&amp; (BEGINS(UPPER(RTL_Product_SubGroup__c), &quot;SECURED&quot;) = FALSE || BEGINS(UPPER(RTL_Product_SubGroup__c), &quot;HOME&quot;) = FALSE)), &quot;Unsecured Loan&quot;, RTL_Product_Group__c))</formula>
    <label>CXM Product Group</label>
    <type>Text</type>
</CustomField>