force-app/main/default/objects/RTL_NBO_History_Product__c/fields/RTL_Invalid_Product_Reason__c.field-meta.xml
<CustomField>
    <fullName>RTL_Invalid_Product_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Invalid Product Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>