force-app/main/default/objects/RTL_NBO_History_Product__c/fields/RTL_Major_Reason__c.field-meta.xml
<CustomField>
    <fullName>RTL_Major_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Major Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>