force-app/main/default/objects/RTL_NBO_History_Product__c/fields/RTL_NBO_ID__c.field-meta.xml
<CustomField>
    <fullName>RTL_NBO_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>NBO External ID</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>