force-app/main/default/objects/RTL_NBO_History_Product__c/fields/RTL_NBO_Product_External_ID__c.field-meta.xml
<CustomField>
    <fullName>RTL_NBO_Product_External_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>NBO Product External ID</label>
    <length>31</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>