force-app/main/default/objects/RTL_NBO_History_Product__c/fields/RTL_Offering_Channel__c.field-meta.xml
<CustomField>
    <fullName>RTL_Offering_Channel__c</fullName>
    <label>Offering Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>Contact Center</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>