force-app/main/default/objects/RTL_NBO_History_Product__c/fields/RTL_Offering_Emp_ID__c.field-meta.xml
<CustomField>
    <fullName>RTL_Offering_Emp_ID__c</fullName>
    <formula>LastModifiedBy.Employee_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Emp ID</label>
    <type>Text</type>
</CustomField>