force-app/main/default/objects/RTL_NBO_History_Product__c/fields/RTL_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>RTL_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>NBO_History_Products</relationshipName>
    <type>Lookup</type>
</CustomField>