force-app/main/default/objects/RTL_NBO_History_Product__c/fields/RTL_Product__c.field-meta.xml
<CustomField>
    <fullName>RTL_Product__c</fullName>
    <description>Display Product Name, or Product Subgroup, or Product Group</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Product</label>
    <length>80</length>
    <type>Text</type>
</CustomField>