force-app/main/default/objects/RTL_NBO_History_Product__c/fields/RTL_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>RTL_Product_Group__c</fullName>
    <description>Product Group of this NBO product to be send via Mulesoft</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>