force-app/main/default/objects/RTL_NBO_History_Product__c/fields/RTL_Product_SubGroup__c.field-meta.xml
<CustomField>
    <fullName>RTL_Product_SubGroup__c</fullName>
    <description>Product Subgroup of this NBO Product to be sent by Mulesoft</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Product SubGroup</label>
    <length>100</length>
    <type>Text</type>
</CustomField>