force-app/main/default/objects/RTL_NBO_History_Product__c/fields/RTL_Reject_Reason__c.field-meta.xml
<CustomField>
    <fullName>RTL_Reject_Reason__c</fullName>
    <label>Reject Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Already used with other bank</fullName>
            </value>
            <value>
                <fullName>Business partner - reputation / bad experience</fullName>
            </value>
            <value>
                <fullName>Channel - inconvenient</fullName>
            </value>
            <value>
                <fullName>CM - Just Open/Fully reduce TAX</fullName>
            </value>
            <value>
                <fullName>CM - Bad experience with Product</fullName>
            </value>
            <value>
                <fullName>CM - No purchasing power</fullName>
            </value>
            <value>
                <fullName>CM - Online security concerns</fullName>
            </value>
            <value>
                <fullName>CM - Refuse since beginning</fullName>
            </value>
            <value>
                <fullName>CM - Risk concern</fullName>
            </value>
            <value>
                <fullName>Marketing - NOT attractive promotion</fullName>
            </value>
            <value>
                <fullName>Marketing - Competitor offer better promotion.</fullName>
            </value>
            <value>
                <fullName>Process - Complicated application &amp; approval</fullName>
            </value>
            <value>
                <fullName>Product - Feature</fullName>
            </value>
            <value>
                <fullName>Product - Credit Limit</fullName>
            </value>
            <value>
                <fullName>Product - Protection</fullName>
            </value>
            <value>
                <fullName>Product - Not attractive Return, NAV, Dividend</fullName>
            </value>
            <value>
                <fullName>Product - Interest</fullName>
            </value>
            <value>
                <fullName>Product - Policy</fullName>
            </value>
            <value>
                <fullName>Product - Too high Fee</fullName>
            </value>
            <value>
                <fullName>ttb - reputation concern</fullName>
            </value>
            <value>
                <fullName>Disqualif. - Bank condition/policy</fullName>
            </value>
            <value>
                <fullName>Disqualif. - Bank condition/policy - Business experience</fullName>
            </value>
            <value>
                <fullName>Disqualif. - Bank condition/policy - Quarantee</fullName>
            </value>
            <value>
                <fullName>Disqualif. - Bank condition/policy - Income</fullName>
            </value>
            <value>
                <fullName>Disqualif. - Bank condition/policy - Financial statement(NCB)</fullName>
            </value>
            <value>
                <fullName>Disqualif. - Bank condition/policy - Occupation/Business Type</fullName>
            </value>
            <value>
                <fullName>Disqualif. - Bank condition/policy - location</fullName>
            </value>
            <value>
                <fullName>CM - No need</fullName>
            </value>
            <value>
                <fullName>CM - Adequate product holding</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>