force-app/main/default/objects/RTL_NBO_History_Product__c/fields/RTL_Related_NBO__c.field-meta.xml
<CustomField>
    <fullName>RTL_Related_NBO__c</fullName>
    <description>NBO that this NBO Product is related to</description>
    <label>Related NBO</label>
    <referenceTo>RTL_NBO_History__c</referenceTo>
    <relationshipName>NBO_History_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>