force-app/main/default/objects/RTL_NBO_History_Product__c/fields/RTL_Sub_Reason__c.field-meta.xml
<CustomField>
    <fullName>RTL_Sub_Reason__c</fullName>
    <description>Sub Reason for this NBO Product</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Sub Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>