force-app/main/default/objects/RTL_NBO_History_Product__c/fields/RTL_User_Branch__c.field-meta.xml
<CustomField>
    <fullName>RTL_User_Branch__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Branch</label>
    <length>50</length>
    <type>Text</type>
</CustomField>