force-app/main/default/objects/RTL_NBO_History_Product__c/fields/RTL_User_Region__c.field-meta.xml
<CustomField>
    <fullName>RTL_User_Region__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>