force-app/main/default/objects/RTL_NBO_History_Product__c/fields/RTL_User_Zone__c.field-meta.xml
<CustomField>
    <fullName>RTL_User_Zone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Zone</label>
    <length>10</length>
    <type>Text</type>
</CustomField>