force-app/main/default/objects/RTL_NBO_History_Product__c/recordTypes/Retail_Bancassurance.recordType-meta.xml
<RecordType>
    <fullName>Retail_Bancassurance</fullName>
    <active>true</active>
    <description>โอกาสผลิตภัณฑ์ ประกัน</description>
    <label>Retail Bancassurance</label>
</RecordType>