force-app/main/default/objects/RTL_NBO_History_Product__c/recordTypes/Retail_Card_and_RDC.recordType-meta.xml
<RecordType>
    <fullName>Retail_Card_and_RDC</fullName>
    <active>true</active>
    <description>โอกาสผลิตภัณฑ์ บัตรเครดิต และ บัตรกดเงินสด เรดดี้แคช</description>
    <label>Retail Card and RDC</label>
</RecordType>