force-app/main/default/objects/RTL_NBO_History_Product__c/recordTypes/Retail_Deposit.recordType-meta.xml
<RecordType>
    <fullName>Retail_Deposit</fullName>
    <active>true</active>
    <description>โอกาสผลิตภัณฑ์ เงินฝาก</description>
    <label>Retail Deposit</label>
</RecordType>