force-app/main/default/objects/RTL_NBO_History_Product__c/recordTypes/Retail_Investment.recordType-meta.xml
<RecordType>
    <fullName>Retail_Investment</fullName>
    <active>true</active>
    <description>โอกาสผลิตภัณฑ์ ลงทุน</description>
    <label>Retail Investment</label>
</RecordType>