force-app/main/default/objects/RTL_NBO_History_Product__c/recordTypes/Retail_Loans.recordType-meta.xml
<RecordType>
    <fullName>Retail_Loans</fullName>
    <active>true</active>
    <description>โอกาสผลิตภัณฑ์ สินเชื่อ</description>
    <label>Retail Loans</label>
</RecordType>