force-app/main/default/objects/RTL_NBO_History_Product__c/recordTypes/Retail_Retentions.recordType-meta.xml
<RecordType>
    <fullName>Retail_Retentions</fullName>
    <active>true</active>
    <description>โอกาส รักษาลูกค้าสินเชื่อ (Retention)</description>
    <label>Retail Retentions</label>
</RecordType>