force-app/main/default/objects/RTL_NBO_History_Product__c/validationRules/RTL_Cannot_Be_New_Again.validationRule-meta.xml
<ValidationRule>
    <fullName>RTL_Cannot_Be_New_Again</fullName>
    <active>true</active>
    <description>NBO Product Status cannot be New from Accepted or Rejected</description>
    <errorConditionFormula>OR(AND( ISPICKVAL(PRIORVALUE(RTL_Status__c), &quot;Rejected&quot;) , ISPICKVAL(RTL_Status__c,&quot;New&quot;)), AND(ISPICKVAL(PRIORVALUE(RTL_Status__c), &quot;Accepted&quot;), ISPICKVAL(RTL_Status__c,&quot;New&quot;)))</errorConditionFormula>
    <errorMessage>NBO Product Status cannot revert to New from Accepted or Rejected</errorMessage>
</ValidationRule>