force-app/main/default/objects/RTL_NBO_History_Product__c/validationRules/RTL_Cannot_Be_Pending_Again.validationRule-meta.xml
<ValidationRule>
    <fullName>RTL_Cannot_Be_Pending_Again</fullName>
    <active>true</active>
    <description>NBO Product Status cannot revert to Pending from Accepted</description>
    <errorConditionFormula>AND(ISPICKVAL(PRIORVALUE(RTL_Status__c), &quot;Accepted&quot;), ISPICKVAL(RTL_Status__c,&quot;Pending&quot;))</errorConditionFormula>
    <errorMessage>NBO Product Status cannot revert to Pending from Accepted</errorMessage>
</ValidationRule>