force-app/main/default/objects/RTL_NBO_History_Product__c/validationRules/RTL_No_Reason_Allowed_for_Accepted_NBO.validationRule-meta.xml
<ValidationRule>
    <fullName>RTL_No_Reason_Allowed_for_Accepted_NBO</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(ISPICKVAL(RTL_Status__c,&quot;Accepted&quot;),
   ISPICKVAL(RTL_Status__c,&quot;Pending&quot;),
   ISPICKVAL(RTL_Status__c,&quot;New&quot;)),  NOT(ISPICKVAL(RTL_Reject_Reason__c,&quot;&quot;)))</errorConditionFormula>
    <errorMessage>NBO Product is New/Accepted/Pending with a Rejection Reason. Please check!</errorMessage>
</ValidationRule>