force-app/main/default/objects/RTL_NBO_History_Product__c/validationRules/RTL_Not_Allow_Edit_Accepted_Product.validationRule-meta.xml
<ValidationRule>
    <fullName>RTL_Not_Allow_Edit_Accepted_Product</fullName>
    <active>true</active>
    <description>Accepted NBO Product cannot be edit</description>
    <errorConditionFormula>AND(ISPICKVAL(PRIORVALUE(RTL_Status__c),&apos;Accepted&apos;),  
   ISCHANGED(RTL_Status__c) 
   )</errorConditionFormula>
    <errorMessage>Accepted NBO Product cannot be edit</errorMessage>
</ValidationRule>