force-app/main/default/objects/RTL_NBO_History_Product__c/validationRules/RTL_Reason_for_Rejected_NBO.validationRule-meta.xml
<ValidationRule>
    <fullName>RTL_Reason_for_Rejected_NBO</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(RTL_Status__c,&quot;Rejected&quot;), ISPICKVAL(RTL_Reject_Reason__c,&quot;&quot;))</errorConditionFormula>
    <errorMessage>Reject reason is required when NBO Product is rejected</errorMessage>
</ValidationRule>