force-app/main/default/objects/RTL_NBO_History_Product__c/validationRules/RTL_Restricted_Status_For_Pending.validationRule-meta.xml
<ValidationRule>
    <fullName>RTL_Restricted_Status_For_Pending</fullName>
    <active>true</active>
    <description>Pending NBO Product can only set to Accepted or Rejected or Pending or Invalid or Blank (required for Accept some scenario from Outbound Call)</description>
    <errorConditionFormula>AND( 
ISPICKVAL(PRIORVALUE(RTL_Status__c),&apos;Pending&apos;), 
NOT(ISPICKVAL(RTL_Status__c,&apos;Accepted&apos;)), 
NOT(ISPICKVAL(RTL_Status__c,&apos;Rejected&apos;)),
NOT(ISPICKVAL(RTL_Status__c,&apos;Pending&apos;)),
NOT(ISPICKVAL(RTL_Status__c,&apos;Invalid&apos;)),
NOT(ISPICKVAL(RTL_Status__c,&apos;&apos;))
)</errorConditionFormula>
    <errorMessage>Pending NBO Product can only set to Accepted or Rejected</errorMessage>
</ValidationRule>