force-app/main/default/objects/RTL_NBO_History_Product__c/validationRules/RTL_Restricted_Status_For_Rejected.validationRule-meta.xml
<ValidationRule>
    <fullName>RTL_Restricted_Status_For_Rejected</fullName>
    <active>true</active>
    <description>Rejected NBO Product can only set to Pending or Accepted or Rejected or Invalid or Blank (Accepted Some from Outbound Call will set combo NBO status as Blank)</description>
    <errorConditionFormula>AND(ISPICKVAL(PRIORVALUE(RTL_Status__c),&apos;Rejected&apos;), 
NOT(ISPICKVAL(RTL_Status__c,&apos;Accepted&apos;)), 
NOT(ISPICKVAL(RTL_Status__c,&apos;Pending&apos;)),
NOT(ISPICKVAL(RTL_Status__c,&apos;Rejected&apos;)),
NOT(ISPICKVAL(RTL_Status__c,&apos;Invalid&apos;)), 
NOT(ISPICKVAL(RTL_Status__c,&apos;&apos;))
)</errorConditionFormula>
    <errorMessage>Rejected NBO Product can only set to Pending or Accepted</errorMessage>
</ValidationRule>